Patient Menu Completed. Waiting on others.
the main app will now transition from the login to the menu GUI and then
to the pain levels. Emergency and patient summary still needs to be
implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".PatientMenuActivity"
+            android:label="@string/title_activity_symptoms" >
+        </activity>
+        <activity
             android:name=".SymptomsActivity"
             android:label="@string/title_activity_symptoms" >
         </activity>
