Implemented Patient List activity
+ Patient List activity
+ Base class and view for Patient Summary activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,14 @@
             android:name=".RegisterPatientActivity"
             android:label="@string/title_activity_register_patient" >
         </activity>
+        <activity
+            android:name=".PatientListActivity"
+            android:label="@string/title_activity_patient_list" >
+        </activity>
+        <activity
+            android:name=".PatientSummaryActivity"
+            android:label="@string/title_activity_patient_summary" >
+        </activity>
     </application>
 
 </manifest>
