logout, symptoms list/view
logout works everywhere now. symptoms list and view for patients are
almost completely implemented. PatientSummaryActivity now displays the
selected patient in the actionsbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
             android:label="@string/title_activity_symptoms" >
         </activity>
         <activity
+            android:name=".SymptomsListActivity"
+            android:label="@string/title_activity_symptoms_list" >
+        </activity>
+        <activity
+            android:name=".SymptomsSummaryActivity"
+            android:label="@string/title_activity_symptoms_summary" >
+        </activity>
+        <activity
             android:name=".SymptomsActivity"
             android:label="@string/title_activity_symptoms" >
         </activity>
